namespace Mentor4U_Avalonia.Models;

public interface IModel
{
    public int Id { get; set; }
}